--- a/template/css/layout.css
+++ b/template/css/layout.css
@@ -648,7 +648,7 @@ body {
 }
 #scheda #content aside h4::before {
   counter-increment: annunci;
-  content: counter(annunci)". " ;
+  content: counter(annunci, upper-alpha)". " ;
 }
 #scheda #content aside p {
   margin: 0px 0px 16px 20px;
@@ -656,7 +656,7 @@ body {
   color: #666;
 }
 #scheda #content aside p a {
-  color: #9d0029;
+  color: #406599;
 }
 #scheda #content aside p a:hover {
   text-decoration: underline;
@@ -665,24 +665,24 @@ body {
   color: #9d0029;
   font-size: 22px;
 }
-#commenti div div #menu1 {
+#commenti  #menu1 {
   height: 30px;
   padding: 5px 0px 5px 8px;
   font-size: 13px;
   color: #fff;
 }
-#commenti div div #menu2 {
+#commenti #menu2 {
   height: 30px;
   padding: 0px;
   font-size:13px;
 }
-#commenti div div #menu1 select {
+#commenti  #menu1 select {
   color: #000;
   height: 20px;
   margin-left: 8px;
   border-radius: 0px;
 }
-#commenti div div #menu2 a {
+#commenti  #menu2 a {
   display: block;
   height: 30px;
   background-color: #ffc752;
@@ -702,7 +702,7 @@ body {
   border-style: none;
   font-size: 13px;
 }
-#commenti div div #menu2 a:hover,
+#commenti #menu2 a:hover,
 #commenti form input[type='submit']:hover {
   text-decoration: none;
   background-color: #ffe9ba;
@@ -736,13 +736,15 @@ body {
   border-style: solid;
   border-width: 1px;
 }
-#commenti .corpo-commento {
+/***** da sistemare ****/
+#scheda #content #commenti  #listacommenti .corpo-commento {
   font-size: 13px;
 }
-#commenti .corpo-commento p {
+#scheda #content #commenti  #listacommenti .corpo-commento p {
+  font-size: 13px;
   margin: 0px 0px 16px 0px;
 }
-#commenti .corpo-commento .tappa {
+#commenti  #listacommenti .corpo-commento .tappa {
   border-radius: 50%;
   background-color: #9d0029;
   width: 20px;
@@ -751,10 +753,12 @@ body {
   text-align: center;
   float: left;
   margin: 0px 8px 8px 0px;
+  vertical-align: top;
 }
-#commenti .corpo-commento .tappa + p {
+#commenti #listacommenti .corpo-commento .tappa + p {
   float: left;
 }
+/***** da sistemare ****/
 #paginazione {
   padding-top: 20px;
   padding-bottom: 20px;
