--- a/template/parziale/footer.ejs
+++ b/template/parziale/footer.ejs
@@ -47,7 +47,7 @@
                 <li><a href="#">Città e paesi</a></li>
                 <li><a href="#">Contatti</a></li>-->
                 <li><a href="/private-policy">Private Policy</a></li>
-                <li><a href="/help-center">Help Center</a></li>
+                <!--<li><a href="/help-center">Help Center</a></li>-->
               </ul>
 
               <h5 id="social">Seguici sui social</h5>
