--- a/template/ricerca.ejs
+++ b/template/ricerca.ejs
@@ -101,7 +101,7 @@
             <div class="row">
 
               <% var tabindex=11;if(serp==undefined) { %>
-              <div class="col-md-12">
+              <div class="col-md-12" id="noResult">
                 <h2>La tua ricerca non ha prodotto nessun risultato</h2>
               </div>
               <% } else {
