--- a/template/private-policy.ejs
+++ b/template/private-policy.ejs
@@ -4,8 +4,7 @@
         <header class="container"  id="search">
           <div class="row">
             <div class="col-sm-12" id="search-title">
-              <h1>Siamo spiacenti<br/> ma la pagina non è disponibile</h1>
-              <h2>fai una <strong>ricerca</strong> o seleziona una <strong>categoria</strong></h2>
+              <h1>Scopri Verona e provincia su 2 ruote</h1>
             </div>
            <div class="col-sm-12" id="search-field">
                <form method="get" action="/cerca">
@@ -46,7 +45,7 @@
 
                      </div>
                    </div>
-                   </div>
+                 </div>
                  </form>
             </div>
 
@@ -54,27 +53,33 @@
         </header>
       </section>
 
-      <main class="container" id="percorsi">
+      <main class="container" id="informativo">
         <div class="row">
           <header class="col-sm-12">
-              <h2>Percorsi</h2>
+              <h2>Private policy</h2>
             </header>
         </div>
         <!--tab index 17-->
         <article class="row">
+          <div class="col-md-12">
+          <p>  Basic services of the Bikeaway srl can be used without providing any personal data. Personal information is only provided on a voluntary basis (e.g. email address).</p>
+          <p>By registering an account, the user grants Bikeaway permission to process personally identifiable data as needed to provide its application services. Furthermore, the user agrees
+            that such data may be shared with select third parties for the sole purpose of enhancing these services.</p>
+          <p>Please note that every transfer of data via the internet might provide security issues. A full protection of data can therefore not be guaranteed.</p>
+          <p>The transmission of not actively requested advertisement and information material to any contact data published on Bikeaway by any third parties is prohibited. Bikeaway
+            has the right to take legal action in case of unrequested transmission of advertisements, such as SPAM-Mails.</p>
 
-          <% categoryObj.forEach(function category(obj) {%>
-          <div class="col-sm-4" tabindex="19" style="height:230px">
-           <header style="background-image:url('/images/<%= obj['image']%>')">
-             <a href="/<%= obj['_id']%>">
-               <h3><%= obj["title"]%></h3>
-                <div><strong>vedi tutti</strong> i percorsi <strong><%= obj["title"]%></strong></div>
-              </a>
-            </header>
+            <h3>Cookies</h3>
+            <p>Cookies are small text files, which are saved on the user’s device when visiting a website. These text files support Bikeaway in analyzing user surfing behavior in order to improve
+               Bikeaway’s services. The storage of cookies can be deactivated in the settings of the user’s browser, which can restrict the usage of Bikeaway’s services.</p>
+
+            <h3>Information, deletion and blockage</h3>
+            <p>The user has the right to receive free information about the stored personal data, its origin and recipient and the purpose of data processing as well as a right of correction,
+              blockage and deletion of the respective data. In case of questions concerning data privacy every user can get in contact with Bikeaway.</p>
+
+            <h3>Change of data privacy policy</h3>
+            <p>This data privacy policy will be updated occasionally. The user is responsible to inform himself or herself about possible changes.</p>
           </div>
-          <% }) %>
-
-
         </article>
 
 
@@ -97,7 +102,6 @@
     	}
 
       </script>
-      <link rel="stylesheet" media="screen" href="css/layout-404.css" />
 
   </body>
 </html>
